# Znum

./: .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  Znum.py  api.py  beastTest.py  logs.txt  main.py  mkdocs.yml  output.xlsx  output_55c6d4ba-c3d6-442a-9815-a9233bbaa6c0.xlsx  output_e8094d48-7a1d-4a9d-8425-3c13116bc1d7.xlsx  prometheeTest.py  pyproject.toml  requirements.txt  sortTest.py  topsisTest.py  vikorTest.py
.github/workflows/: docs.yml
api/: Dockerfile  main.py  requirements.txt
api/static/js/: script.js
docs/: api.md  getting-started.md  index.md
docs/guide/: arithmetic.md  comparison.md  creating.md
docs/mcdm/: promethee.md  topsis.md
helper/: Beast.py
static/css/: styles.css
templates/: index.html
tests/: test_arithmetic.py  test_arithmetic_properties.py  test_arithmetic_snapshots.py  test_beast_module.py  test_comparison.py  test_crisp.py  test_dist_module.py  test_distance.py  test_fast_b.py  test_intermediate.py  test_math_module.py  test_mcdm.py  test_mcdm_rankings.py  test_mcdm_sophisticated.py  test_normalization.py  test_promethee.py  test_sort.py  test_sort_module.py  test_topsis_module.py  test_tri_analytical.py  test_valid_module.py  test_validation.py  test_vikor_module.py  test_znum_arithmetic.py  test_znum_comparison.py  test_znum_utility.py
znum/: Beast.py  Dist.py  Math.py  Promethee.py  Sort.py  Topsis.py  Type.py  Valid.py  Vikor.py  Znum.py  __init__.py  core.py  dist.py  exception.py  exceptions.py  math_ops.py  promethee.py  sort.py  topsis.py  tri_math.py  utils.py  valid.py
