[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "znum"
version = "4.3.0"
description = "Z-number data type for fuzzy arithmetic and multi-criteria decision making (TOPSIS, PROMETHEE)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Maga Nuriyev", email = "maganuriyev@gmail.com" }
]
keywords = [
    "z-number",
    "fuzzy-number",
    "fuzzy-arithmetic",
    "mcdm",
    "multi-criteria-decision-making",
    "topsis",
    "promethee",
    "optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "highspy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/MahammadNuriyev62/Znum"
Repository = "https://github.com/MahammadNuriyev62/Znum"
Issues = "https://github.com/MahammadNuriyev62/Znum/issues"

[tool.hatch.build.targets.wheel]
packages = ["znum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
